[metadata]
name = rungekutta
version = 0.1.0dev
author = Alexander Jaust
author_email = alexander.jaust@ipvs.uni-stuttgart.de
description = A package providing Runge-Kutta methods for solving ordinary differential equations
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:SC-SGS/python-runge-kutta.git
project_urls =
    Bug Tracker = git@github.com:SC-SGS/python-runge-kutta.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
